# djimaging

./: .gitignore  LICENSE  README.md  make_user.py  pyproject.toml  requirements-autorois.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-app.yml
djimaging/: __init__.py
djimaging/autorois/: autorois_utils.py  autoshift_utils.py  cellpose_wrapper.py  corr_roi_mask_utils.py  post_processing.py  roi_canvas.py  unet.py
djimaging/basic_tables/: chirp.py  orientation.py
djimaging/core_tables/: __init__.py  experiment.py  field.py  location.py  stimulus.py  traces.py  userinfo.py
djimaging/defaults/: core_defaults.py
djimaging/djconfig/: README.md  djconf_template.json
djimaging/my_tables/: README.md
djimaging/notebooks/: Readme.md  connect_to_schema.ipynb  scan_for_corrupted_recordings.ipynb  tutorial_advanced_schema.ipynb  tutorial_classifier_schema.ipynb  tutorial_create_schema.ipynb  tutorial_my_schema.ipynb  tutorial_populate_schema.ipynb  tutorial_rgc_classifier.ipynb
djimaging/schemas/: Readme.md  _new_schema_example.py  advanced_schema.py  basic_schema.py  core_autorois_schema.py  core_plus_optional_schema.py  core_schema.py  full_rgc_autorois_schema.py  full_rgc_schema.py  full_schema.py  glm_schema.py  misc_schema.py  rf_glm_schema.py  rf_schema.py  (+4 more)
meta_data/: stimulator_delay.csv
notebooks/: tutorial_advanced_schema.ipynb  tutorial_create_schema.ipynb  tutorial_create_schema_from_scratch.ipynb  tutorial_load_core_schema.ipynb  tutorial_populate_schema.ipynb  tutorial_rgc_classifier.ipynb
testdata/: test_mb.pkl
tests/: test_build_schemas.py  test_chirp.py  test_definitions_basic_tables.py  test_definitions_core_tables.py  test_definitions_optional_tables.py  test_math_utils.py  test_orientation.py  test_preprocesstraces.py  test_receptivefield.py  test_scanm_utils.py  test_sta.py  utils.py
(+197 files in other folders)
